# nazbot

./: .gitignore  DEVGUIDE.md  README.md  bot.py  orm.py  pyproject.toml  requirements.txt  schema.prisma
cogs/: activity.py  admin.py  api.py  chess.py  control.py  general.py  market.py  return.py  system.py  weekly_event.py
cogs/archive/: control.py.disabled  random.py.disabled  returns.py.disabled
lib/: discord_paginated_embed.py  lib.py  logger.py
lib/wynn_api/: guild.py  guild_models.py  models.py  player.py  player_models.py  requestor.py
