[project]
name = "nazbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.0",
    "aiosqlite>=0.21.0",
    "dateparser>=1.2.2",
    "discord-py==2.5.2",
    "pydantic>=2.12.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "tortoise-orm>=0.25.1",
]